# game_ai

./: .gitignore  CLAUDE.md  PROJECT_STATUS.md  README.md  create_fresh_db.py  deploy.sh  main.py  package.json  tunnel.sh  vercel.json
api/: npcs.py  (+1 more)
sultan_game/: .env.example  ARCHITECTURE_REVIEW.md  alembic.ini  hello.py  main.py  pyproject.toml  requirements.txt  test_data.py
sultan_game/admin-panel/: .gitignore  README.md  next.config.ts  package.json  start.sh
sultan_game/admin-panel/.next/: BUILD_ID  app-build-manifest.json  app-path-routes-manifest.json  build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace
sultan_game/admin-panel/.next/cache/: .previewinfo  .rscinfo
sultan_game/admin-panel/.next/server/: app-paths-manifest.json  (+5 more)
sultan_game/alembic/: env.py
sultan_game/alembic/versions/: 5da983fc0eff_initial_schema_with_redesigned_models.py  738f05485e83_add_scene_requirements_tables.py  d70b15394242_add_scene_display_config_fields_manually.py
sultan_game/api/: ai_configs.py  cards.py  npcs.py  scenes.py  templates.py
sultan_game/core/: database.py  logging_config.py
sultan_game/models/: __init__.py  ai_config.py  card.py  card_redesign.py  card_system.py  combat.py  dialogue.py  npc.py  npc_redesign.py  player.py  player_character.py  player_redesign.py  scene.py  scene_config.py  scene_redesign.py  scene_requirements.py  template.py
sultan_game/static/admin/: comprehensive_admin.html  index.html
sultan_game/static/css/: admin.css
sultan_game/static/js/: admin.js  comprehensive_admin.js
(+88 files in other folders)
